--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node:version": "node -v && npm -v && tsc --version",
     "preview": "http-server dist/webapp -o -p 3011"
   },
-  "private": true,
+  "private": "<%=private%>",
+  "autor":"<%=author%>",
   "dependencies": {
     "@angular/animations": "~10.2.0",
     "@angular/common": "~10.2.0",
@@ -80,5 +81,6 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
     "webpack-bundle-analyzer": "^3.9.0"
-  }
+  },
+  "license": "<%=license%>"
 }
